--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,16 @@ jobs:
       - name: Build with Next.js
         run: npm run build
 
+      - name: Create .nojekyll in out
+        run: touch out/.nojekyll
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './out/'
+          path: out
 
   deploy:
     environment:
