--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build  && touch ./out/.nojekyll && echo 'www.devopsmario.com' > ./out/CNAME",
     "start": "next start",
     "lint": "next lint"
   },
