--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build  && touch ./out/.nojekyll && echo 'www.devopsmario.com' > ./out/CNAME",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,8 +18,9 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
-} 
+}
