install gh-pages directly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Install gh-pages
+        run: npm install -g gh-pages
+
       - name: Upload artifact
         run: touch ./out/.nojekyll && cp ./CNAME ./out/CNAME && gh-pages -d out -t true
   deploy:
